Navbar and footbar style

--- a/inc/reg.html
+++ b/inc/reg.html
@@ -1,4 +1,13 @@
-<h1> Regisztráció </h1>
+<!-- Heading Row -->
+<div class="row align-items-center my-5">
+  <div class="col-lg-6">
+    <img class="img-fluid rounded mb-4 mb-lg-4" src="assets/login.png" style="height: 200px;" alt="login">
+  </div>
+
+<!-- /.col-lg-8 -->
+<div class="col-lg-5">
+
+<h1 class="font-weight-light"> Regisztráció </h1>
 <form action="index.php?page=regment" method="POST">
   <div class="form-group">
     <label for="exampleInputUsername1">Felhasználónév: </label>
@@ -16,5 +25,7 @@
     <input type="password" class="form-control" 
 	id="exampleInputPassword2"  name="password2" placeholder="Jelszó mégegyszer!">
   </div>
-  <button type="submit" class="btn btn-primary">Rögzítés</button>
+  <button type="submit" class="btn btn-primary">Regisztráció</button>
 </form>
+</div>
+</div>
