--- a/inc/login.html
+++ b/inc/login.html
@@ -1,7 +1,7 @@
     <!-- Heading Row -->
     <div class="row align-items-center my-5">
-      <div class="col-lg-7">
-        <img class="img-fluid rounded mb-4 mb-lg-0" src="http://placehold.it/900x400" alt="">
+      <div class="col-lg-6">
+        <img class="img-fluid rounded mb-4 mb-lg-0" src="assets/login.png" style="height: 200px;" alt="login">
       </div>
       <!-- /.col-lg-8 -->
       <div class="col-lg-5">
