--- a/inc/homepage.html
+++ b/inc/homepage.html
@@ -1,18 +1,19 @@
-    <!-- Heading Row -->
+    <!-- gyűjtő div -->
     <div class="row align-items-center my-5">
+      <!-- kép div -->
       <div class="col-lg-7">
-        <img class="img-fluid rounded mb-4 mb-lg-2" src="assets/homepage.jpg" alt="">
+        <img class="img-fluid rounded mb-4 mb-lg-2" src="assets/homepage2.jpg" alt="">
       </div>
-      <!-- /.col-lg-8 -->
+      <!-- Szöveg div -->
       <div class="col-lg-5">
         <h1 class="font-weight-light">Kezdőlap</h1>
-        <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
-        <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
-        <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
-
+        <p>Magyarországon 1998-tól kell útdíjat fizetni, mely a 2013-as e-útdíj bevezetésével vált teljessé minden jármű kategória számára. Korábban a díjfizetős úthálózathoz tartozó hidak is az útdíj megfizetésének részét képezték. 2022.01.01-től a hidak kikerülnek az útdíj alól és önállóan képezik azok fenntartását, üzemeltetését, innovatív ötletek alapján történő - korszerűsítését, - új hidak építését biztosító MHD-t (Magyar Híd Díj).
+        Magyarországon 2021.12.01-én megjelent 555/2021. MHM (Magyar Hidak Minisztériuma) Rendelet a 3,5t alatti járművek magyarországi hidakon való átkelés díjairól a hidak használatáról és üzemeltetéséről, 2022.01.01-től lép életbe.
+        Kizárólag megfelelő díjkategória történő híddíjfizetés esetén biztosított a magyarországi hidakon való járműforgalom szabályos közlekedése.
+        Oldalunkon tájékozódhat a bevezetésre kerülő híd díj megfizetésére vonatkozó díjkategóriákról, azokba tartozó járművek műszaki paramétereiről.</p>
       </div>
-      <!-- /.col-md-4 -->
+    <!-- /gyűjtő div -->
     </div>
-    <!-- /.row -->
+
 
   
