--- a/inc/login.html
+++ b/inc/login.html
@@ -1,9 +1,10 @@
-    <!-- Heading Row -->
+    <!-- Gyűjtő div-->
     <div class="row align-items-center my-5">
+		<!-- Kép div-->
       <div class="col-lg-6">
         <img class="img-fluid rounded mb-4 mb-lg-0" src="assets/login.png" style="height: 200px;" alt="login">
       </div>
-      <!-- /.col-lg-8 -->
+      <!-- bejelentkezési felület div - POST metódussal loginvalid -->
       <div class="col-lg-5">
         <h1 class="font-weight-light">Bejelentkezés</h1>
 			<form action="index.php?page=loginvalid" method="POST">
@@ -13,14 +14,16 @@
 				id="exampleInputUsername1" name="username"
 				placeholder="Felhasználónév">
 			  </div>
+
 			  <div class="form-group">
 				<label for="exampleInputPassword1">Jelszó</label>
 				<input type="password" class="form-control" 
 				id="exampleInputPassword1" name="password" placeholder="Jelszó">
 			  </div>
+
 			  <button type="submit" class="btn btn-primary">Bejelentkezés</button>
 			</form>
       </div>
-      <!-- /.col-md-4 -->
+	<!-- /Gyűjtő div -->
     </div>
-    <!-- /.row -->
+
