--- a/inc/reg.html
+++ b/inc/reg.html
@@ -1,31 +1,35 @@
-<!-- Heading Row -->
+<!-- gyűjtő div -->
 <div class="row align-items-center my-5">
+  <!-- kép div -->
   <div class="col-lg-6">
     <img class="img-fluid rounded mb-4 mb-lg-4" src="assets/login.png" style="height: 200px;" alt="login">
   </div>
 
-<!-- /.col-lg-8 -->
-<div class="col-lg-5">
+<!-- regisztrációs felület div -> POST metódussal a regment.php-ba -->
+  <div class="col-lg-5">
+    <h1 class="font-weight-light"> Regisztráció </h1>
+    <form action="index.php?page=regment" method="POST">
+      <div class="form-group">
+        <label for="exampleInputUsername1">Felhasználónév: </label>
+        <input type="text" class="form-control" 
+          id="exampleInputUsername1" name="username"
+          placeholder="Írd be a felhasználóneved!">
+      </div>
 
-<h1 class="font-weight-light"> Regisztráció </h1>
-<form action="index.php?page=regment" method="POST">
-  <div class="form-group">
-    <label for="exampleInputUsername1">Felhasználónév: </label>
-    <input type="text" class="form-control" 
-	id="exampleInputUsername1" name="username"
-	placeholder="Írd be a felhasználóneved!">
+      <div class="form-group">
+        <label for="exampleInputPassword1">Jelszó</label>
+        <input type="password" class="form-control" 
+          id="exampleInputPassword1" name="password1" placeholder="Írd be a jelszót!">
+      </div>
+
+      <div class="form-group">
+        <label for="exampleInputPassword2">Jelszó ismét</label>
+        <input type="password" class="form-control" 
+          id="exampleInputPassword2"  name="password2" placeholder="Jelszó mégegyszer!">
+      </div>
+
+      <button type="submit" class="btn btn-primary">Regisztráció</button>
+    </form>
   </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Jelszó</label>
-    <input type="password" class="form-control" 
-	id="exampleInputPassword1" name="password1" placeholder="Írd be a jelszót!">
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword2">Jelszó ismét</label>
-    <input type="password" class="form-control" 
-	id="exampleInputPassword2"  name="password2" placeholder="Jelszó mégegyszer!">
-  </div>
-  <button type="submit" class="btn btn-primary">Regisztráció</button>
-</form>
-</div>
+  <!-- /gyűjtő div-->
 </div>
