--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
@@ -20,15 +19,15 @@
 </head>
 
 <body>
-
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg fixed-top" id="navi">
+    <!--Logó és cím-->
     <img src="assets/nuszlogo_hun.png" alt="Logo" style="height: 50px;">
     <a class="navbar-brand text-white ml-4" href="index.php?page=homepage">Nemzeti útdíjfizetési szolgáltató Zrt.</a>
     <div class="container">
 
+      <!--Kategóriák és rendszámok menü-->
       <div class="collapse navbar-collapse" id="navbarResponsive">
-
         <ul class="navbar-nav">
           <li class="nav-item ">
             <a class="nav-link text-white" href="index.php?page=categories">Kategóriák</a>
@@ -38,6 +37,7 @@
           </li>
         </ul>
 
+        <!--Ország karbantartó menü, ha be vagyunk jelentkezve-->
         <?php
           if(isset($_SESSION['login_id'])) {
             print '
@@ -49,27 +49,29 @@
         ';}
         ?>  
 
+        <!--bejelentkezés és regisztráció menüpont, ha nem vagyunk bejelentkezve -->
         <ul class="navbar-nav ml-auto">
           <?php
           if(!isset($_SESSION['login_id'])) {
             print '
 				  <li class="nav-item ">
-					<a class="nav-link text-white" href="index.php?page=login">Bejelentkezés</a>
+					  <a class="nav-link text-white" href="index.php?page=login">Bejelentkezés</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link text-white" href="index.php?page=reg">Regisztráció</a>
+					  <a class="nav-link text-white" href="index.php?page=reg">Regisztráció</a>
 				  </li>';
         }else{
           print '
+          <!--különben kijelentkezés gomb, ha be vagyunk jelentkezbe, és a felhasználónév kiírása-->
           <li class="nav-item">
             <a class="nav-link text-white" href="inc/logout.php" onclick="return confirm(answer);">Kijelentkezés</a>
-            </li>
+          </li>
           ';
 
           print '
           <li class="nav-item">
             <a class="nav-link text-warning font-weight-bold">Bejelentkezve, mint: ' . $_SESSION['login_user'] . '</a>
-            </li>' ;
+          </li>' ;
         
         } 
        ?>
@@ -78,42 +80,34 @@
     </div>
   </nav>
 
-
-
-  
-
    <main>
   <!-- Page Content -->
-  <div class="container">
-    <?php include("inc/$content"); ?>
-  </div>
-
-   </main> 
+    <div class="container">
+      <?php include("inc/$content"); ?>
+    </div>
+  </main> 
   
-
-    <!-- Content Row -->
-
-   <!-- Footer -->
+ <!-- Footer -->
    <footer id="footer">
     <div class="container ">
-      <p class="m-0 mt-3 text-center text-white">Minden jog fenntartva. &copy; Herczeg Ferenc 2021</p>
+      <p class="m-0 mt-3 text-center text-white">Minden jog fenntartva. &copy; Ragó Ádám 2021</p>
+      <!--faviconok-->
       <div id="icons">
-        <a href="https://www.facebook.com/ferenc.herczeg.904" target="_blank"><i class="fab fa-facebook-f mr-2" style="font-size:40px;color:blue"></i></a>
+        <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f mr-2" style="font-size:40px;color:blue"></i></a>
         <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"  style="font-size:40px; color: red;"></i></a>
-  
       </div>
     </div>
     <!-- /.container -->
   </footer>
 
-
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!--answer változó létrehozása js-sel, mert logoutnál stringként kiírva hibára futott valamiért. A többi helyen működött úgy.-->
   <script type=text/javascript>
     var answer = "Biztosan ki szeretnél jelentkezni?";
   </script>
 
 </body>
-
 </html>
